<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContComb</string>
    <string name="action_settings">Configurações</string>

    <string-array name="items">
        <item>Página Inicial</item>
        <item>Carros</item>
        <item>Abastecimetos</item>
        <item>Lembretes</item>
        <item>Contato</item>
        <item>Ajuda</item>]
        <item>ContComb On</item>
        <item>Sair</item>
    </string-array>
    
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao">Confirmação</string>

    <string name="selecione_provedor">Selecione seu provedor de Email</string>

    <string name="bem_vindo">Bem Vindo ao ContComb!</string>
    <string name="introducao">Com esse aplicativo você terá mais controle de quanto o seu carro consome!</string>
    <string name="o_que_compensa">O que compensa?*</string>
    <string name="nota">*Esse cálculo só é válido para postos do Brasil.</string>
    <string name="rs_etanol">R$ Etanol</string>
    <string name="ou">ou</string>
    <string name="rs_gasolina">R$ Gasolina</string>
    
    <string name="ajuda">Ajuda</string>
    <string name="dicas">Dicas:</string>
    <string name="ajuda_editar">• Para editar um registro, toque o mesmo na tela de listagem.</string>
    <string name="ajuda_excluir">• Para excluir um registro, toque e segure o mesmo na tela de listagem.</string>
    <string name="ajuda_campo_obrigatorio">• Os campos com asterisco (*) são obrigatórios.</string>
    <string name="ajuda_action_bar">• Atente-se para os botões na Action Bar.</string>
    <string name="ajuda_menu">• O menu fica ao lado esquerdo, clique no ícone do app.</string>
    <string name="ajuda_lembrete">• Em lembretes, se um registro for incluído com o "Notificar" ativo e a data for a corrente, um alerta será exibido ao acessar o app com a descrição do lembrete.</string>

    <string name="lembrete">Lembrete</string>
	<string name="desc">Descrição *</string>
	<string name="notificar">Notificar</string>
    
    
    <string name="abastecimento">Abastecimento</string>
    <string name="carro">Carro</string>
    <string name="odometro">Odômetro (Km) *</string>
    <string name="litros">Litros *</string>
    <string name="obs">Observações</string>
    <string name="data">Data *</string>
    
    <string name="marca">Marca *</string>
    
    <string name="list_data">DATA</string>
    <string name="list_odometro">ODOM</string>
    <string name="list_litros">LITROS</string>
    <string name="list_media">MEDIA</string>
    <string name="list_obs">OBS</string>

    <string name="list_nome">NOME</string>

    <string name="listagem_abastecimentos">Listagem - Abastecimentos</string>
    <string name="listagem_carros">Listagem - Carros</string>
    <string name="listagem_lembretes">Listagem - Lembretes</string>
    
    <string name="cabec_data">DATA</string>
    <string name="cabec_odometro">KM</string>
    <string name="cabec_litros">L</string>
    <string name="cabec_media">MÉDIA (Km/L)</string>
    <string name="cabec_obs">OBS</string>

    <string name="resumo">Resumo</string>
    <string name="resumo_abastecimentos">Abastecimentos:</string>
    <string name="resumo_media_total">Média total:</string>

    <string name="cabec_desc">Descrição</string>
    <string name="cabec_marca">Marca</string>
    
    <string name="filtro">Filtro...</string>

    <string name="contato">Contato</string>
    <string name="deixa_uma_msg">Deixe uma mensagem para o desenvolvedor</string>
    
    <string name="campo_obrigatorio_titulo">Campo Obrigatório</string>
    <string name="valor_invalido_titulo">Valor Inválido</string>
    <string name="etanol_ou_gasolina_titulo">Etanol ou Gasolina?</string>
    
    <string name="etanol">O valor do etanol é MENOR que 70% do valor da gasolina. Compensa abastecer com ETANOL. </string>
    <string name="gasolina">O valor do etanol é MAIOR que 70% do valor da gasolina. Compensa abastecer com GASOLINA.</string>

    <string name="sucesso_cadastro">Registro incluido com sucesso!</string>
    <string name="sucesso_edicao">Registro atualizado com sucesso!</string>
    <string name="sucesso_exclusao">Registro excluido com sucesso!</string>
    
    <string name="campo_obrigatorio">Existem campos obrigatórios que não foram preenchidos.</string>
    <string name="campo_nao_pode_ser_zero">Os campos não podem ter o valor zero (0).</string>
    
    <string name="confirma_exclusao">Deseja realmente excluir o registro? </string>
    <string name="aviso_abastecimentos_do_carro">Os abastecimentos relacionados a esse carro também serão removidos.</string>
    
    <string name="nao_ha_carro_cadastrado">Para acessar essa página você precisa ter pelo menos um carro cadastrado.</string>
    
    <string name="erro">Erro</string>
    <string name="erro_listar">Erro ao carregar a lista: </string>
    <string name="erro_carregar_registro">Erro ao carregar o registro: </string>
    <string name="erro_gravar_registro">Erro ao gravar o registro: </string>

    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Fechar navigation drawer</string>
    
    <!-- Cont Comb On -->
    <string name="contcombon">ContComb On</string>
    <string name="contcombon_introducao">Aplicativo do contcomb, só que agora online!</string>
    <string name="contcombon_novidades">Novidades:</string>
    
    <string name="contcombon_1">• Mantenha seus dados salvos na web, ou seja, acesse de qualquer dispositivo!.</string>
    <string name="contcombon_2">• Em breve, além do aplicativo, um site será lançado para que você possa acessar do seu computador os mesmos dados!</string>
    <string name="contcombon_3">• Além de controlar o consumo do seu carro, nessa versão é possível obter um resumo mais detalhado sobre seus abastecimentos.</string>
    <string name="contcombon_4">• Você também conseguirá analisar os outros veículos cadastrados, sabendo quais são os mais econômicos!</string>
    <string name="contcombon_5">• Compare a média do seu veículo com a média de outro veículos do mesmo modelo que o seu!</string>
    <string name="contcombon_6">• Faça o download e/ou importe os dados clicando no link:</string>
    <string name="download">Download</string>
    <string name="importar">Importar Dados</string>
    <string name="km_atual">Kilometragem atual *</string>
    <string name="km_andados">Km`s andandos a partir do último abastecimento  *</string>
    <string name="ano">Ano *</string>
    <string name="motor">Motor *</string>
    <string name="motor_hint">1.0, 1.6...</string>
    <string name="login">Login *</string>
    <string name="senha">Senha *</string>
    <string name="enviando">Enviando...</string>
    <string name="importado_sucesso">Dados importados com sucesso!</string>
</resources>
