<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/list_data" />

        <TextView
            android:id="@+id/tvOdometro"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/list_odometro" />

        <TextView
            android:id="@+id/tvLitros"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/list_litros" />

        <TextView
            android:id="@+id/tvMedia"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/list_media" />

        <TextView
            android:id="@+id/tvObs"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/list_obs" />
    </LinearLayout>

</RelativeLayout>