<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundLinearLayout"
    android:orientation="vertical"
    tools:context=".AbastecimentoActivity" >

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lembrete" />

    <LinearLayout style="@style/FormLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carro" />

        <Spinner
            android:id="@+id/spCarros"
            android:layout_width="fill_parent"
            android:layout_height="54px"
            android:background="@drawable/rounded_spinner" >
        </Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textMultiLine"
            android:lines="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext" />

            <ImageButton
                android:id="@+id/btnDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/icon_button"
                android:src="@drawable/ic_action_go_to_today" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>